[package]
name = "prox"
version = "0.1.0"
authors = ["Kyle Petryszak <6314611+ProjectInitiative@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
config = "0.10.1"
dirs = "3.0.1"
rpassword = "5.0.0"
rand = "0.7.3"
